cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- as of GHC 9.0.1, enabling -Wmissing-exported-signatures disables stricter -Wmissing-signatures
    -- I want -Wmissing-signatures, so I will not enable -Wmissing-exported-signatures.
    -- They may have changed this in 9.2.1, so check back later.
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

executable 01_count_parens
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       01_count_parens.hs

executable 02_presents
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       02_presents.hs

executable 03_delivery_grid
  import: bin, flags
  build-depends: base, adventofcode, containers
  main-is:       03_delivery_grid.hs

executable 04_advent_coins
  import: bin, flags
  build-depends: base, bytestring, cryptohash-md5, directory
  main-is:       04_advent_coins.hs

executable 05_nice_strings
  import: bin, flags
  build-depends: base, adventofcode, containers
  main-is:       05_nice_strings.hs
