cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocpw
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Password
  build-depends:   base

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

test-suite test-password
  import: flags
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        password.hs
  -- without -dynamic:
  -- Could not find module ‘Test.HUnit
  -- There are files missing in the ‘HUnit-1.6.0.0’ package,
  ghc-options:    -dynamic
  build-depends:  base, aocpw, HUnit

executable 01_count_parens
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       01_count_parens.hs

executable 02_presents
  import: bin, flags
  build-depends: base, adventofcode, aocsplit
  main-is:       02_presents.hs

executable 03_delivery_grid
  import: bin, flags
  -- nubOrd added in containers 0.6.0.1
  build-depends: base, adventofcode, containers >= 0.6.0.1
  main-is:       03_delivery_grid.hs

executable 04_advent_coins
  import: bin, flags
  ghc-options: -dynamic
  build-depends: base, bytestring, cryptohash-md5, directory
  main-is:       04_advent_coins.hs

executable 05_nice_strings
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       05_nice_strings.hs

executable 06_light_grid
  import: bin, flags
  -- modifyArray added in array 0.5.6.0
  build-depends: base, adventofcode, aocsplit, array >= 0.5.6.0
  main-is:       06_light_grid.hs

executable 07_logic_gates
  import: bin, flags
  build-depends: base, adventofcode, containers
  main-is:       07_logic_gates.hs

executable 08_string_overhead
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       08_string_overhead.hs

executable 09_hamiltonian
  import: bin, flags
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends: base, adventofcode, containers >= 0.5
  main-is:       09_hamiltonian.hs

executable 10_look_and_say
  import: bin, flags
  build-depends: base, array, directory
  main-is:       10_look_and_say.hs

executable 11_passwords
  import: bin, flags
  build-depends: base, aocpw, directory
  main-is:       11_passwords.hs

executable 12_json_numbers
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       12_json_numbers.hs

executable 13_optimal_seating
  import: bin, flags
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends: base, adventofcode, containers >= 0.5
  main-is:       13_optimal_seating.hs

executable 14_reindeer_race
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       14_reindeer_race.hs

executable 15_cookies
  import: bin, flags
  build-depends: base, adventofcode, aocsplit
  main-is:       15_cookies.hs

executable 16_aunt_sue
  import: bin, flags
  build-depends: base, adventofcode, aocsplit, containers
  main-is:       16_aunt_sue.hs

executable 17_containers
  import: bin, flags
  build-depends: base, adventofcode, containers
  main-is:       17_containers.hs

executable 18_game_of_life
  import: bin, flags
  -- modifyArray added in array 0.5.6.0
  build-depends: base, adventofcode, array >= 0.5.6.0
  main-is:       18_game_of_life.hs

executable 19_molecule_replacement
  import: bin, flags
  -- Data.Map.Strict added in containers 0.5.0.0
  build-depends: base, adventofcode, containers >= 0.5
  main-is:       19_molecule_replacement.hs

executable 20_factors
  import: bin, flags
  build-depends: base, array, directory
  main-is:       20_factors.hs

executable 21_rpg
  import: bin, flags
  build-depends: base
  main-is:       21_rpg.hs

executable 22_wizard
  import: bin, flags
  build-depends: base, containers, mtl
  main-is:       22_wizard.hs

executable 23_asm
  import: bin, flags
  build-depends: base, adventofcode, array
  main-is:       23_asm.hs

executable 24_partition
  import: bin, flags
  build-depends: base, adventofcode
  main-is:       24_partition.hs

executable 25_triangular
  import: bin, flags
  build-depends: base
  main-is:       25_triangular.hs
